--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "react-phone-number-input": "^3.3.6",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "vite-plugin-require": "^1.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
