--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "@types/yup": "^0.32.0",
     "axios": "^1.6.1",
+    "formik": "^2.4.5",
     "html-webpack-plugin": "^5.5.3",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -27,7 +29,8 @@
     "react-i18next": "^13.2.2",
     "react-phone-number-input": "^3.3.6",
     "react-router-dom": "^6.16.0",
-    "vite-plugin-require": "^1.1.11"
+    "vite-plugin-require": "^1.1.11",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
